<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.egova.eagleyes.util.VehicleUtil" />

        <variable
            name="mClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="alarmDetail"
            type="com.egova.eagleyes.model.respose.DispositionAlarm" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color"
        android:orientation="vertical">

        <include
            android:id="@+id/titleBar"
            layout="@layout/title_back_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/plateNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{VehicleUtil.formatPlateNo(alarmDetail.plate)}"
                    app:itemTitle="@string/plate_no"
                    app:showArrow="false" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{alarmDetail.vehicleBrandName}"
                    app:itemTitle="@string/brand"
                    app:showArrow="false" />


                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/vehicle_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{alarmDetail.vehicleColorName}"
                    app:itemTitle="@string/vehicle_color"
                    app:showArrow="false" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/vehicle_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{alarmDetail.plateTypeName}"
                    app:itemTitle="@string/vehicle_type"
                    app:showArrow="false" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/take_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{alarmDetail.passTime}"
                    app:itemTitle="@string/take_time"
                    app:showArrow="false" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/take_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{alarmDetail.tollgateName}"
                    app:itemTitle="@string/take_position"
                    app:showArrow="false" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/handleStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_margin"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{VehicleUtil.dealAlarmStatus(alarmDetail.handled)}"
                    app:itemTitle="@string/handle_status"
                    app:showArrow="false" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/handlePerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{VehicleUtil.formatNull(alarmDetail.HandlerName)}"
                    app:itemTitle="@string/handle_person"
                    app:showArrow="false" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/handlerReson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{VehicleUtil.formatNull(alarmDetail.handleTime)}"
                    app:itemTitle="@string/handler_time"
                    app:showArrow="false" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/dispositionReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:contentColor="@color/color_light_gray"
                    app:itemContent="@{VehicleUtil.formatNull(alarmDetail.cause)}"
                    app:itemTitle="@string/disposition_reason"
                    app:showArrow="false" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/vehicle_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_margin"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:onClick="@{mClick}"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:itemTitle="@string/vehicle_picture" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/search_by_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:onClick="@{mClick}"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:itemTitle="@string/search_by_picture" />

                <com.egova.eagleyes.widget.ItemTextArrowView
                    android:id="@+id/vehicle_portrait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_divider_height"
                    android:layout_marginBottom="@dimen/big_margin"
                    android:background="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:onClick="@{mClick}"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingBottom="@dimen/small_margin"
                    app:itemTitle="@string/vehicle_portrait" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>